JumpScript/tests/baselines/reference/unusedTypeParametersWithUnderscore.errors.txt
tests/cases/compiler/unusedTypeParametersWithUnderscore.jump(1,16): error TS6133: 'U' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersWithUnderscore.jump(3,12): error TS6133: 'U' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersWithUnderscore.jump(5,17): error TS6133: 'U' is declared but its value is never read.
tests/cases/compiler/unusedTypeParametersWithUnderscore.jump(7,13): error TS6133: 'U' is declared but its value is never read.


==== tests/cases/compiler/unusedTypeParametersWithUnderscore.jump (4 errors) ====
    function f<_T, U>() { }
                   ~
!!! error TS6133: 'U' is declared but its value is never read.
    
    type T<_T, U> = { };
               ~
!!! error TS6133: 'U' is declared but its value is never read.
    
    interface I<_T, U> { };
                    ~
!!! error TS6133: 'U' is declared but its value is never read.
    
    class C<_T, U> { };
                ~
!!! error TS6133: 'U' is declared but its value is never read.
    